<resources>
    <!-- Errors   -->
    <string name="error_needs_internet_connection">Нужно установить связь с Интернетом</string>
    <string name="help_needs_internet_connection">Для работы с сервером, пожалуйста, установите связь с Интернетом</string>
    <string name="is_agreed_title_text">Согласие на обработку\nперсональных данных:</string>
    <string name="create_new_user_button_text">Создать пользователя</string>
    <string name="password_layout_hint">Введите пароль</string>
    <string name="email_layout_hint">Введите e-mail</string>
    <string name="first_name_layout_hint">Введите своё имя</string>
    <string name="tokens_show_place">Токены представлены в логе</string>


    <string name="app_name">BarrierAuthorise</string>
    <string name="create_new_user_text">СОЗДАТЬ нового пользователя</string>
    <string name="authorise_user_text">АВТОРИЗОВАТЬ пользователя</string>
    <string name="first_name_layout_textfield_hint">Имя</string>
    <string name="email_textfield_hint">E-mail</string>
    <string name="password_textfield_hint">Пароль</string>
    <string name="new_user_created">Новый пользователь успешно создан, его данные представлены в логе</string>
    <string name="authorise_user_button_text">Авторизоватьcя</string>
    <string name="login_name_layout_hint">Введите свой логин (E-mail)</string>
    <string name="login_name_layout_helper_text">Логин (E-mail)</string>
    <string name="authorise_user_completed">Пользователь успешно авторизован</string>

</resources>