<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                style="@style/input_text_layouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorIconTintMode="src_atop">

                <EditText
                    android:id="@+id/first_name_layout_textfield"
                    style="@style/input_text_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_layout_textfield_hint"
                    android:inputType="textPersonName"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/input_text_layouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorIconTintMode="src_atop">

                <EditText
                    android:id="@+id/email_textfield"
                    style="@style/input_text_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_textfield_hint"
                    android:inputType="textEmailAddress"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/is_agreed_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_margin="8dp"
                    android:text="Согласие на обработку\nперсональных данных:"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <CheckBox
                    android:id="@+id/is_agreed_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintStart_toEndOf="@id/is_agreed_title"
                    app:layout_constraintTop_toTopOf="@id/is_agreed_title"
                    app:layout_constraintBottom_toBottomOf="@id/is_agreed_title"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/input_text_layouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorIconTintMode="src_atop">

                <EditText
                    android:id="@+id/password_textfield"
                    style="@style/input_text_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_textfield_hint"
                    android:inputType="textPassword"
                    tools:ignore="TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>